fix some layout issues

--- a/themes/timtec/static/css/less/course-content.less
+++ b/themes/timtec/static/css/less/course-content.less
@@ -37,7 +37,7 @@
   // COURSE SUMMARY - Course intro
   // ********************************************************************* //
   .summary {
-    background-color: rgba(40,112,187,0.5);
+    background-color: rgba(40,112,187,0.8);
     margin: 0 -15px;
     padding: 15px 0;
     @media (min-width: @screen-sm-min) {
