--- a/themes/timtec/static/css/less/course-nav.less
+++ b/themes/timtec/static/css/less/course-nav.less
@@ -8,9 +8,8 @@
       font-size: 19px;
       padding: 3px 7px;
     }
-    &:hover {
-      color: @brand-info;
-
+    &:hover,&.active {
+      color: #fff;
     }
   }
 }
