--- a/themes/timtec/static/css/less/courses.less
+++ b/themes/timtec/static/css/less/courses.less
@@ -38,6 +38,9 @@
           font-weight: bold;
           color: #1254a5;
         }
+        a {
+          color: lighten(@brand-info, 60%);
+        }
       }
       &:nth-child(2) {
         background-color: @brand-success;
