--- a/themes/timtec/static/css/less/settings.less
+++ b/themes/timtec/static/css/less/settings.less
@@ -84,6 +84,10 @@ a:hover, a:active {
 @btn-default-border: darken(@btn-default-bg, 5%);
 @btn-default-color: #fff;
 
+.btn-default[disabled] {
+    background-color: #ccc;
+    color: #999;
+}
 
 //== Form states and alerts
 //
